--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -51,6 +51,7 @@
                 class="recipe-list__icon-btn recipe-list__icon-btn--edit"
                 type="button"
                 aria-label="Modifica ricetta"
+                (click)="onEditRecipe(recipe.id)"
               >
                 <span aria-hidden="true">✎</span>
               </button>
